[gd_scene load_steps=12 format=4 uid="uid://bb1mp0g4ccklu"]

[ext_resource type="PackedScene" uid="uid://dgw6nanegiqld" path="res://scenes/managers/GameManager.tscn" id="1_1n512"]
[ext_resource type="PackedScene" uid="uid://bouj1c13p4ja6" path="res://scenes/characters/PlayerCharacter.tscn" id="2_2iy3v"]
[ext_resource type="TileSet" uid="uid://cpiormm6cegct" path="res://assets/tilesets/tileset.tres" id="2_jvjt4"]
[ext_resource type="PackedScene" uid="uid://bf0ia26jj2idx" path="res://scenes/levels/ActionCamera.tscn" id="3_41arr"]
[ext_resource type="Script" uid="uid://e76w1djf5c7j" path="res://scripts/levels/tilemaps/tilemap.gd" id="4_6drk1"]
[ext_resource type="PackedScene" uid="uid://c5enemy1char1" path="res://scenes/characters/EnemyCharacter.tscn" id="5_enemy_scene"]
[ext_resource type="PackedScene" uid="uid://gccg1ctal63h" path="res://scenes/ui/TurnLabelCanvas.tscn" id="6_3qnke"]
[ext_resource type="Script" uid="uid://cdxkxm8vj40bg" path="res://scripts/levels/pause_menu_handler.gd" id="7"]
[ext_resource type="Script" uid="uid://b7ey3qmif5m76" path="res://scripts/levels/test_scene.gd" id="8_level"]
[ext_resource type="PackedScene" path="res://scenes/ui/TileInfoPanel.tscn" id="9_tileinfo"]
[ext_resource type="Script" uid="uid://bb7w0gltb41yg" path="res://scripts/managers/battle/battle_input_handler.gd" id="10_input"]

[node name="TestScene" type="Node2D"]
script = ExtResource("8_level")

[node name="PauseMenuHandler" type="Node" parent="."]
script = ExtResource("7")

[node name="GameManager" parent="." instance=ExtResource("1_1n512")]

[node name="BattleInputHandler" type="Node" parent="."]
script = ExtResource("10_input")

[node name="PlayerTeam" type="Node" parent="."]

[node name="PlayerCharacter" parent="PlayerTeam" instance=ExtResource("2_2iy3v")]

[node name="PlayerCharacter2" parent="PlayerTeam" instance=ExtResource("2_2iy3v")]
position = Vector2(110, 70)

[node name="EnemyTeam" type="Node" parent="."]

[node name="EnemyCharacter" parent="EnemyTeam" instance=ExtResource("5_enemy_scene")]
position = Vector2(-222, -31)
ai_pause_duration = 1.2
initiative = 5

[node name="EnemyCharacter2" parent="EnemyTeam" instance=ExtResource("5_enemy_scene")]
position = Vector2(-109, -117)
ai_pause_duration = 1.2

[node name="EnemyCharacter3" parent="EnemyTeam" instance=ExtResource("5_enemy_scene")]
position = Vector2(-195, 44)
ai_pause_duration = 1.2

[node name="EnemyCharacter4" parent="EnemyTeam" instance=ExtResource("5_enemy_scene")]
position = Vector2(-53, 164)
ai_pause_duration = 1.2
initiative = 15

[node name="ActionCamera" parent="." instance=ExtResource("3_41arr")]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(3, 0)
script = ExtResource("4_6drk1")

[node name="Walls" type="TileMapLayer" parent="Node2D"]
z_index = 2
tile_map_data = PackedByteArray("AADw//X/AgAAAA0AAADw//b/AgAAAA0AAADw//f/AgAAAA0AAADw//j/AgAAAA0AAADw//n/AgAAAA0AAADw//r/AgAAAA0AAADx//T/AgABAAwAAADy//T/AgABAAwAAADz//T/AgABAAwAAAD0//T/AgABAAwAAAD1//T/AgABAAwAAAD2//T/AgACAAwAAAD2//X/AgACAA0AAAD2//b/AgACAA0AAAD2//f/AgACAA0AAAD2//j/AgACAA0AAAD2//n/AgACAA0AAAD2//r/AgACAA0AAAD2//v/AgACAA4AAADw//v/AgAAAA4AAADz//X/AgAGAAgAAADx//f/AgAJAAUAAAD0//j/AgAJAAUAAADy//r/AgAJAAUAAAD1//X/AgAUAAgAAAD8//X/AgAAAAoAAAD8//b/AgAAAAoAAAD8//f/AgAAAAoAAAD8//j/AgAAAAsAAAD9//j/AgABAAsAAAD+//j/AgABAAsAAAD///j/AgABAAsAAAACAPj/AgABAAsAAAADAPj/AgABAAsAAAAEAPj/AgABAAsAAAAFAPj/AgACAAsAAAAFAPT/AgACAAoAAAAFAPX/AgACAAoAAAAFAPb/AgACAAoAAAAFAPf/AgACAAoAAAD8//T/AgAAAAoAAAD8//P/AgAAAAkAAAD9//P/AgABAAkAAAD+//P/AgABAAkAAAD///P/AgAAAAoAAAACAPP/AgACAAoAAAADAPP/AgABAAkAAAAEAPP/AgABAAkAAAAFAPP/AgACAAkAAAD///b/AgAAAAsAAAACAPb/AgACAAsAAAD///T/AgAAAAoAAAD///X/AgAAAAoAAAACAPT/AgACAAoAAAACAPX/AgACAAoAAAD///L/AgAAAAkAAAACAPL/AgACAAkAAAAAAPL/AgABAAYAAAABAPL/AgABAAYAAAAKAPj/AgATAAYAAAAKAPf/AgATAAUAAAALAPf/AgAUAAUAAAAMAPf/AgAVAAUAAAAMAPj/AgAVAAYAAAAMAPn/AgAVAAcAAAAKAPn/AgATAAcAAAD1//j/AgAYAAcAAAD1//n/AgAYAAgAAAD0//r/AgAYAAoAAADw//T/AgAAAAwAAAD5//3/AgAHAAAAAAAIAP//AgAHAAAAAAD4/wcAAgAHAAAAAAACAPr/AgAHAAMAAAACAPv/AgAHAAQAAAD//wMAAgAHAAMAAAD//wQAAgAHAAQAAAALAAcAAgAHAAMAAAALAAgAAgAHAAQAAAD9//n/AgAHAAUAAAD9//r/AgAHAAYAAAD+//n/AgAIAAUAAAD+//r/AgAIAAYAAAA=")
tile_set = ExtResource("2_jvjt4")

[node name="HighlightLayer" type="TileMapLayer" parent="Node2D"]
z_index = 1
tile_set = ExtResource("2_jvjt4")

[node name="AttackHighlightLayer" type="TileMapLayer" parent="Node2D"]
z_index = 2
tile_set = ExtResource("2_jvjt4")

[node name="BaseGrid" type="TileMapLayer" parent="Node2D"]
tile_map_data = PackedByteArray("AAAHAAYAAgAFAAAAAAAAAAAAAgAFAAMAAAABAAAAAgAFAAMAAAABAAEAAgAFAAMAAAACAAEAAgAFAAAAAAACAAIAAgAFAAAAAAADAAIAAgAFAAAAAAADAAMAAgAFAAAAAAAEAAMAAgAFAAAAAAAEAAQAAgAFAAAAAAAFAAQAAgAFAAAAAAAGAAQAAgAFAAAAAAAGAAUAAgAFAAAAAAAHAAUAAgAFAAAAAAAIAAYAAgAFAAAAAAAIAAUAAgAFAAAAAAAFAAMAAgAGAAEAAAAAAAEAAgAFAAMAAAAAAAIAAgAFAAMAAAAAAAMAAgAFAAMAAAAAAAQAAgAFAAMAAAAAAAUAAgAFAAMAAAAAAAYAAgAFAAQAAAABAAYAAgAFAAMAAAADAAYAAgAFAAAAAAAEAAYAAgAFAAAAAAAFAAYAAgAFAAAAAAAGAAYAAgAGAAAAAAAIAAQAAgAGAAEAAAAIAAMAAgAFAAAAAAAIAAIAAgAFAAAAAAAIAAEAAgAGAAAAAAAIAAAAAgAFAAAAAAAHAAAAAgAFAAAAAAAGAAAAAgAFAAAAAAAFAAAAAgAFAAAAAAAEAAAAAgAGAAAAAAADAAAAAgAFAAAAAAACAAAAAgAFAAAAAAABAAIAAgAFAAMAAAABAAMAAgAFAAMAAAABAAQAAgAFAAMAAAABAAUAAgAFAAQAAAACAAUAAgAFAAAAAAADAAUAAgAFAAAAAAADAAQAAgAFAAAAAAACAAMAAgAFAAAAAAACAAQAAgAFAAAAAAAEAAUAAgAFAAAAAAAFAAUAAgAFAAAAAAAGAAMAAgAFAAAAAAAHAAMAAgAGAAEAAAAHAAIAAgAGAAAAAAAGAAIAAgAFAAAAAAAGAAEAAgAFAAAAAAAFAAEAAgAFAAAAAAAEAAEAAgAFAAAAAAADAAEAAgAFAAAAAAAEAAIAAgAGAAAAAAAFAAIAAgAFAAAAAAAHAAEAAgAFAAAAAAAHAAQAAgAFAAAAAAAJAP//AgAFAAAAAAAJAAAAAgAFAAAAAAAJAAEAAgAFAAAAAAAJAAIAAgAFAAAAAAAJAAMAAgAFAAAAAAAJAAQAAgAFAAAAAAAJAAUAAgAGAAAAAAAJAAYAAgAFAAAAAAAJAAcAAgAGAAEAAAAIAAcAAgAFAAAAAAAHAAcAAgAFAAAAAAAGAAcAAgAGAAEAAAAFAAcAAgAFAAAAAAAEAAcAAgAFAAAAAAADAAcAAgAFAAAAAAACAAcAAgAFAAAAAAABAAcAAgAFAAMAAAAAAAcAAgAFAAQAAAD//wcAAgAFAAAAAAD//wYAAgAFAAAAAAD//wUAAgAFAAAAAAD//wQAAgAGAAAAAAD//wMAAgAFAAAAAAD//wIAAgAFAAAAAAD//wEAAgAGAAEAAAD//wAAAgAGAAEAAAD/////AgAFAAAAAAAAAP//AgAFAAMAAAABAP//AgAFAAMAAAACAP//AgAFAAAAAAADAP//AgAFAAAAAAAEAP//AgAFAAAAAAAFAP//AgAFAAAAAAAGAP//AgAFAAAAAAAHAP//AgAGAAEAAAAIAP//AgAFAAAAAAACAAYAAgAFAAAAAAD8////AgAFAAAAAAD8/wAAAgAFAAAAAAD8/wEAAgAFAAAAAAD9////AgAFAAAAAAD9/wAAAgAFAAAAAAD9/wEAAgAGAAAAAAD+////AgAFAAAAAAD+/wAAAgAGAAEAAAD+/wEAAgAFAAAAAAD8/wIAAgAFAAAAAAD8/wMAAgAFAAAAAAD8/wQAAgAFAAAAAAD9/wIAAgAGAAEAAAD9/wMAAgAFAAAAAAD9/wQAAgAFAAAAAAD+/wIAAgAFAAAAAAD+/wMAAgAGAAEAAAD+/wQAAgAFAAAAAAD8/wUAAgAFAAAAAAD8/wYAAgAFAAAAAAD8/wcAAgAFAAAAAAD9/wUAAgAFAAAAAAD9/wYAAgAFAAAAAAD9/wcAAgAFAAAAAAD+/wUAAgAGAAAAAAD+/wYAAgAGAAAAAAD+/wcAAgAFAAAAAAD2//n/AgAFAAAAAAD2//r/AgAFAAAAAAD3//r/AgAFAAAAAAD4//v/AgAGAAAAAAD1//j/AgAFAAAAAAD1//r/AgAGAAAAAAD1/wEAAgAGAAEAAAD1/wQAAgAFAAAAAAD1/wcAAgAFAAAAAAD1/woAAgAFAAAAAAD1/wsAAgAFAAAAAAD2//j/AgAFAAAAAAD2//v/AgAFAAAAAAD2//3/AgAFAAAAAAD2/wIAAgAFAAAAAAD2/wUAAgAFAAAAAAD2/wYAAgAFAAAAAAD2/wgAAgAFAAAAAAD2/wsAAgAGAAEAAAD3//v/AgAFAAAAAAD3//3/AgAFAAAAAAD3//7/AgAGAAAAAAD3/wAAAgAFAAAAAAD3/wIAAgAFAAAAAAD3/wMAAgAFAAAAAAD3/wQAAgAFAAAAAAD3/wgAAgAFAAAAAAD4//j/AgAFAAAAAAD4//n/AgAFAAAAAAD4//r/AgAFAAAAAAD4//3/AgAFAAAAAAD4////AgAFAAAAAAD4/wAAAgAFAAAAAAD4/wEAAgAFAAAAAAD4/wMAAgAFAAAAAAD4/wkAAgAFAAAAAAD4/wsAAgAFAAAAAAD5//z/AgAFAAAAAAD5//3/AgAFAAAAAAD5/wAAAgAFAAAAAAD5/wMAAgAFAAAAAAD5/wUAAgAGAAEAAAD5/wYAAgAFAAAAAAD5/wgAAgAFAAAAAAD6//n/AgAGAAEAAAD6//r/AgAFAAAAAAD6////AgAFAAAAAAD6/wEAAgAFAAAAAAD6/wIAAgAGAAAAAAD6/wQAAgAFAAAAAAD6/wUAAgAFAAAAAAD7//n/AgAGAAEAAAD7//v/AgAGAAEAAAD7//z/AgAFAAAAAAD7//7/AgAFAAAAAAD7/wAAAgAFAAAAAAD7/wIAAgAGAAEAAAD7/wMAAgAFAAAAAAD7/wQAAgAFAAAAAAD7/wYAAgAFAAAAAAD7/wkAAgAGAAAAAAD7/wsAAgAFAAAAAAD8//r/AgAGAAAAAAD8//3/AgAFAAAAAAD9//r/AgAFAAAAAAD9//z/AgAFAAAAAAD9//3/AgAFAAAAAAD9/wkAAgAFAAAAAAD9/woAAgAFAAAAAAD+//r/AgAFAAAAAAD+//v/AgAFAAAAAAD+//z/AgAFAAAAAAD///n/AgAFAAAAAAD///z/AgAGAAEAAAD//wgAAgAFAAAAAAAAAPn/AgAFAAQAAAAAAAkAAgAFAAMAAAAAAAoAAgAFAAMAAAABAPj/AgAEAAsAAAABAPv/AgAFAAQAAAABAPz/AgAFAAMAAAABAP7/AgAFAAQAAAABAAgAAgAFAAMAAAABAAsAAgAFAAQAAAACAPv/AgAFAAAAAAADAPv/AgAFAAAAAAADAAkAAgAFAAAAAAAEAP3/AgAFAAAAAAAEAAoAAgAFAAAAAAAEAAsAAgAFAAAAAAAFAPr/AgAFAAAAAAAFAPz/AgAFAAAAAAAFAP7/AgAGAAAAAAAFAAgAAgAFAAAAAAAFAAoAAgAFAAAAAAAGAPn/AgAFAAAAAAAGAPz/AgAFAAAAAAAHAPr/AgAFAAAAAAAHAPv/AgAFAAAAAAAHAPz/AgAFAAAAAAAHAP3/AgAFAAAAAAAHAAoAAgAGAAEAAAAIAPn/AgAFAAAAAAAIAPr/AgAFAAAAAAAIAP7/AgAFAAAAAAAIAAgAAgAFAAAAAAAJAPj/AgAGAAEAAAAJAPn/AgAFAAAAAAAJAPr/AgAFAAAAAAAJAPv/AgAFAAAAAAAJAPz/AgAGAAEAAAAJAP7/AgAGAAAAAAAJAAkAAgAFAAAAAAAKAPv/AgAFAAAAAAAKAP//AgAGAAAAAAAKAAAAAgAFAAAAAAAKAAUAAgAFAAAAAAAKAAkAAgAFAAAAAAAKAAoAAgAFAAAAAAALAPr/AgAFAAAAAAALAPv/AgAGAAEAAAALAPz/AgAFAAAAAAALAP3/AgAFAAAAAAALAP7/AgAFAAAAAAALAAEAAgAFAAAAAAALAAMAAgAGAAEAAAALAAUAAgAGAAAAAAALAAYAAgAFAAAAAAAMAPj/AgAFAAAAAAAMAPv/AgAFAAAAAAAMAP3/AgAFAAAAAAAMAAAAAgAFAAAAAAAMAAcAAgAFAAAAAAAMAAgAAgAFAAAAAAANAPj/AgAFAAAAAAANAPn/AgAGAAAAAAANAPz/AgAFAAAAAAANAAIAAgAFAAAAAAANAAMAAgAFAAAAAAANAAQAAgAFAAAAAAANAAcAAgAFAAAAAAANAAkAAgAFAAAAAAANAAoAAgAFAAAAAAANAAsAAgAFAAAAAAAOAP3/AgAFAAAAAAAOAP//AgAFAAAAAAAOAAQAAgAFAAAAAAAOAAUAAgAGAAEAAAAOAAkAAgAFAAAAAAAOAAoAAgAFAAAAAADw//b/AgAFAAAAAADw//j/AgAFAAAAAADw//n/AgAFAAAAAADw//r/AgAFAAAAAADw//7/AgAFAAAAAADw////AgAFAAAAAADw/wAAAgAGAAAAAADw/wEAAgAFAAAAAADw/wMAAgAFAAAAAADw/wkAAgAFAAAAAADw/wsAAgAFAAAAAADx//X/AgAFAAAAAADx//b/AgAFAAAAAADx//n/AgAFAAAAAADx/wAAAgAFAAAAAADx/wMAAgAFAAAAAADx/wQAAgAGAAAAAADx/wYAAgAFAAAAAADx/wcAAgAFAAAAAADx/wgAAgAGAAAAAADy//X/AgAFAAAAAADy//f/AgAFAAAAAADy//j/AgAFAAAAAADy//r/AgAFAAAAAADy//z/AgAFAAAAAADy////AgAFAAAAAADy/wQAAgAFAAAAAADy/wkAAgAFAAAAAADz//j/AgAGAAAAAADz//v/AgAFAAAAAADz//z/AgAFAAAAAADz/wEAAgAFAAAAAADz/wMAAgAFAAAAAADz/wcAAgAGAAAAAADz/woAAgAFAAAAAADz/wsAAgAFAAAAAAD0//f/AgAFAAAAAAD0/wIAAgAGAAEAAAD0/wwAAgAGAAEAAAD1//b/AgAFAAAAAAD1//v/AgAFAAAAAAD1//3/AgAFAAAAAAD1/wAAAgAFAAAAAAD1/wUAAgAFAAAAAAD1/wYAAgAFAAAAAAD1/wwAAgAGAAAAAAD2//X/AgAFAAAAAAD2//b/AgAFAAAAAAD2/wMAAgAFAAAAAAD2/wQAAgAFAAAAAAD3//b/AgAFAAAAAAD3//f/AgAFAAAAAAD3/wEAAgAFAAAAAAD3/wYAAgAFAAAAAAD3/wcAAgAGAAEAAAD3/wkAAgAFAAAAAAD3/wsAAgAFAAAAAAD3/wwAAgAGAAAAAAD4//z/AgAGAAEAAAD5//f/AgAFAAAAAAD5/wsAAgAFAAAAAAD6//b/AgAFAAAAAAD6//f/AgAFAAAAAAD6//j/AgAFAAAAAAD6//z/AgAFAAAAAAD6//7/AgAFAAAAAAD6/wYAAgAGAAAAAAD6/wgAAgAFAAAAAAD6/wwAAgAGAAAAAAD7//b/AgAFAAAAAAD7//j/AgAFAAAAAAD7//r/AgAGAAEAAAD7//3/AgAFAAAAAAD7/wEAAgAGAAEAAAD7/woAAgAFAAAAAAD8//v/AgAFAAAAAAD8/wgAAgAFAAAAAAD8/woAAgAGAAAAAAD9//b/AgAFAAAAAAD9//v/AgAFAAAAAAD9/wgAAgAFAAAAAAD9/wsAAgAFAAAAAAD+//f/AgAFAAAAAAD///j/AgAFAAAAAAD///7/AgAFAAAAAAAAAPz/AgAFAAMAAAAAAAsAAgAFAAMAAAAAAAwAAgAFAAMAAAABAPX/AgAFAAMAAAABAPr/AgAFAAMAAAABAP3/AgAFAAMAAAACAPX/AgAFAAAAAAACAPn/AgAFAAAAAAACAPr/AgAFAAAAAAACAP7/AgAFAAAAAAADAPf/AgAFAAAAAAADAPj/AgAFAAAAAAADAAgAAgAFAAAAAAADAAoAAgAFAAAAAAADAAsAAgAFAAAAAAAEAPv/AgAFAAAAAAAEAPz/AgAFAAAAAAAEAP7/AgAGAAAAAAAEAAkAAgAFAAAAAAAFAPf/AgAFAAAAAAAFAPn/AgAGAAAAAAAFAAsAAgAFAAAAAAAGAPX/AgAFAAAAAAAGAPb/AgAFAAAAAAAGAP7/AgAFAAAAAAAGAAkAAgAFAAAAAAAGAAoAAgAFAAAAAAAGAAwAAgAFAAAAAAAHAPX/AgAFAAAAAAAHAP7/AgAFAAAAAAAHAAgAAgAFAAAAAAAIAPf/AgAFAAAAAAAJAPb/AgAFAAAAAAAJAP3/AgAFAAAAAAAJAAwAAgAFAAAAAAAKAPj/AgAFAAAAAAAKAPr/AgAFAAAAAAAKAPz/AgAFAAAAAAAKAP7/AgAFAAAAAAAKAAQAAgAFAAAAAAAKAAsAAgAFAAAAAAALAPb/AgAGAAEAAAALAPj/AgAUAAYAAAALAAcAAgAFAAAAAAALAAgAAgAFAAAAAAALAAsAAgAFAAAAAAAMAPX/AgAFAAAAAAAMAP//AgAFAAAAAAAMAAEAAgAGAAAAAAAMAAkAAgAFAAAAAAANAPr/AgAFAAAAAAANAAAAAgAFAAAAAAANAAEAAgAGAAAAAAANAAgAAgAFAAAAAAANAAwAAgAFAAAAAAAOAPX/AgAFAAAAAAAOAPb/AgAFAAAAAAAOAPf/AgAFAAAAAAAOAPj/AgAGAAEAAAAOAPn/AgAGAAAAAAAOAAcAAgAFAAAAAAAOAAsAAgAFAAAAAAAOAAwAAgAFAAAAAAAPAP//AgAFAAAAAAAPAAIAAgAFAAAAAAAPAAcAAgAFAAAAAAAQAPj/AgAFAAAAAAAQAP//AgAFAAAAAAAQAAAAAgAGAAEAAAAQAAQAAgAFAAAAAAAQAAwAAgAGAAEAAADw//f/AgAFAAAAAADw/wUAAgAFAAAAAADw/wYAAgAFAAAAAADw/wgAAgAFAAAAAADx//j/AgAFAAAAAADx//v/AgAFAAAAAADx//3/AgAFAAAAAADx////AgAFAAAAAADy//b/AgAFAAAAAADy/wAAAgAFAAAAAADy/wEAAgAFAAAAAADy/wUAAgAGAAEAAADy/wcAAgAFAAAAAADz//n/AgAFAAAAAADz//3/AgAFAAAAAADz//7/AgAFAAAAAADz/wIAAgAFAAAAAADz/wUAAgAFAAAAAADz/wYAAgAFAAAAAADz/wgAAgAFAAAAAADz/wkAAgAGAAAAAADz/wwAAgAGAAAAAAD0//r/AgAFAAAAAAD0//v/AgAFAAAAAAD0//3/AgAGAAEAAAD0//7/AgAFAAAAAAD0/wAAAgAFAAAAAAD0/wUAAgAFAAAAAAD0/wcAAgAFAAAAAAD0/woAAgAFAAAAAAD0/wsAAgAGAAAAAAD1/wIAAgAFAAAAAAD1/wMAAgAFAAAAAAD2//z/AgAFAAAAAAD3//z/AgAFAAAAAAD3/wUAAgAFAAAAAAD4//X/AgAFAAAAAAD4//b/AgAFAAAAAAD4//7/AgAFAAAAAAD4/wQAAgAFAAAAAAD4/wcAAgAFAAAAAAD5//n/AgAFAAAAAAD5/wEAAgAFAAAAAAD5/wIAAgAFAAAAAAD5/wkAAgAFAAAAAAD5/wwAAgAFAAAAAAD6/wAAAgAFAAAAAAD6/wMAAgAGAAEAAAD6/wsAAgAFAAAAAAD7/wUAAgAFAAAAAAD7/wgAAgAFAAAAAAD7/wwAAgAFAAAAAAD8//X/AgAFAAAAAAD8//j/AgAFAAAAAAD8//7/AgAGAAEAAAD8/wkAAgAFAAAAAAD9//j/AgAFAAAAAAD+//3/AgAGAAAAAAD+//7/AgAGAAAAAAD+/wgAAgAFAAAAAAD///b/AgAFAAAAAAD///f/AgAFAAAAAAD///v/AgAFAAAAAAD//wsAAgAFAAAAAAD//wwAAgAFAAAAAAAAAPX/AgAFAAMAAAAAAPb/AgAEAAsAAAAAAPf/AgAFAAQAAAABAPn/AgAFAAMAAAABAAkAAgAFAAMAAAABAAwAAgAFAAMAAAACAPf/AgAFAAAAAAACAPj/AgAFAAAAAAACAP3/AgAFAAAAAAACAAgAAgAFAAAAAAACAAkAAgAFAAAAAAADAPn/AgAFAAAAAAADAPr/AgAFAAAAAAADAPz/AgAFAAAAAAADAAwAAgAFAAAAAAAEAPf/AgAFAAAAAAAEAPn/AgAFAAAAAAAEAAgAAgAFAAAAAAAEAAwAAgAFAAAAAAAFAPb/AgAFAAAAAAAFAPj/AgAFAAAAAAAGAPf/AgAFAAAAAAAGAPj/AgAGAAEAAAAGAPv/AgAFAAAAAAAGAP3/AgAFAAAAAAAIAPb/AgAFAAAAAAAIAPv/AgAFAAAAAAAIAPz/AgAFAAAAAAAIAP3/AgAFAAAAAAAIAAsAAgAFAAAAAAAKAPb/AgAFAAAAAAAKAAEAAgAFAAAAAAAKAAMAAgAGAAEAAAALAPX/AgAFAAAAAAALAAwAAgAFAAAAAAAMAPb/AgAFAAAAAAAMAPf/AgAFAAAAAAAMAPz/AgAFAAAAAAAMAAMAAgAFAAAAAAAMAAUAAgAFAAAAAAAMAAYAAgAFAAAAAAAMAAsAAgAFAAAAAAANAP3/AgAFAAAAAAANAP7/AgAFAAAAAAANAP//AgAGAAAAAAANAAUAAgAFAAAAAAAOAPv/AgAFAAAAAAAOAAgAAgAFAAAAAAAPAPz/AgAFAAAAAAAPAAMAAgAFAAAAAAAPAAYAAgAFAAAAAAAPAAgAAgAFAAAAAAAQAPb/AgAGAAEAAAAQAPn/AgAFAAAAAAAQAPr/AgAFAAAAAAAQAAEAAgAFAAAAAAAQAAIAAgAGAAEAAAAQAAgAAgAFAAAAAAAQAAkAAgAFAAAAAAAQAAoAAgAFAAAAAADw/wIAAgAFAAAAAADw/wcAAgAFAAAAAADx//r/AgAGAAEAAADx//z/AgAFAAAAAADx/wwAAgAFAAAAAADy//v/AgAFAAAAAADy/wMAAgAFAAAAAADy/wYAAgAFAAAAAADz//X/AgAFAAAAAADz////AgAFAAAAAAD0//n/AgAFAAAAAAD0/wgAAgAGAAEAAAD1//f/AgAFAAAAAAD1//z/AgAFAAAAAAD1/wgAAgAFAAAAAAD2////AgAGAAAAAAD2/wEAAgAGAAEAAAD2/wcAAgAFAAAAAAD2/woAAgAFAAAAAAD3//X/AgAFAAAAAAD4//f/AgAGAAAAAAD4/wIAAgAFAAAAAAD4/wYAAgAFAAAAAAD4/wgAAgAFAAAAAAD5//X/AgAFAAAAAAD5//v/AgAFAAAAAAD6//X/AgAFAAAAAAD9//7/AgAGAAAAAAD+/wkAAgAGAAAAAAD+/woAAgAGAAAAAAD+/wwAAgAFAAAAAAAAAPv/AgAFAAMAAAAAAP7/AgAFAAMAAAACAPz/AgAFAAAAAAADAPb/AgAFAAAAAAADAP7/AgAFAAAAAAAFAPv/AgAFAAAAAAAHAAkAAgAFAAAAAAAIAPX/AgAGAAEAAAAIAAwAAgAFAAAAAAAJAAsAAgAFAAAAAAAKAP3/AgAFAAAAAAAKAAYAAgAGAAAAAAALAPf/AgAFAAAAAAALAAIAAgAFAAAAAAALAAoAAgAGAAEAAAAMAPr/AgAFAAAAAAAMAAwAAgAFAAAAAAANAPX/AgAFAAAAAAANAAYAAgAFAAAAAAAOAAAAAgAFAAAAAAAOAAEAAgAFAAAAAAAOAAMAAgAFAAAAAAAPAPn/AgAFAAAAAAAPAP3/AgAGAAAAAAAPAAQAAgAFAAAAAAAPAAoAAgAFAAAAAAAPAAsAAgAFAAAAAAAQAPX/AgAGAAEAAAAQAPz/AgAFAAAAAAAQAP7/AgAFAAAAAAAQAAUAAgAFAAAAAAAQAAcAAgAFAAAAAADw//v/AgAFAAAAAADw//z/AgAFAAAAAADw//3/AgAFAAAAAADw/wQAAgAFAAAAAADw/woAAgAFAAAAAADx//f/AgAFAAAAAADx//7/AgAFAAAAAADx/wEAAgAFAAAAAADx/wIAAgAFAAAAAADx/wUAAgAFAAAAAADx/wkAAgAFAAAAAADx/woAAgAGAAEAAADx/wsAAgAFAAAAAADy//n/AgAFAAAAAADy//3/AgAFAAAAAADy//7/AgAGAAEAAADy/wIAAgAGAAAAAADy/wgAAgAFAAAAAADy/woAAgAFAAAAAADy/wsAAgAFAAAAAADy/wwAAgAFAAAAAADz//b/AgAFAAAAAADz//f/AgAFAAAAAADz//r/AgAGAAEAAADz/wAAAgAFAAAAAADz/wQAAgAFAAAAAAD0//X/AgAFAAAAAAD0//b/AgAGAAAAAAD0//j/AgAFAAAAAAD0//z/AgAFAAAAAAD0////AgAFAAAAAAD0/wEAAgAFAAAAAAD0/wMAAgAFAAAAAAD0/wQAAgAFAAAAAAD0/wYAAgAFAAAAAAD0/wkAAgAFAAAAAAD1//X/AgAFAAAAAAD1//n/AgAFAAAAAAD1//7/AgAFAAAAAAD1////AgAFAAAAAAD1/wkAAgAFAAAAAAD2//f/AgAFAAAAAAD2//7/AgAFAAAAAAD2/wAAAgAFAAAAAAD2/wkAAgAFAAAAAAD2/wwAAgAFAAAAAAD3//j/AgAGAAEAAAD3//n/AgAGAAEAAAD3////AgAFAAAAAAD3/woAAgAFAAAAAAD4/wUAAgAFAAAAAAD4/woAAgAFAAAAAAD4/wwAAgAFAAAAAAD5//b/AgAFAAAAAAD5//j/AgAFAAAAAAD5//r/AgAFAAAAAAD5//7/AgAFAAAAAAD5////AgAFAAAAAAD5/wQAAgAFAAAAAAD5/wcAAgAFAAAAAAD5/woAAgAFAAAAAAD6//v/AgAFAAAAAAD6//3/AgAFAAAAAAD6/wcAAgAFAAAAAAD6/wkAAgAFAAAAAAD6/woAAgAGAAEAAAD7//X/AgAFAAAAAAD7//f/AgAFAAAAAAD7////AgAFAAAAAAD7/wcAAgAGAAAAAAD8//b/AgAFAAAAAAD8//f/AgAFAAAAAAD8//z/AgAFAAAAAAD8/wsAAgAGAAEAAAD8/wwAAgAFAAAAAAD9//X/AgAFAAAAAAD9//f/AgAFAAAAAAD9//n/AgAFAAAAAAD9/wwAAgAFAAAAAAD+//X/AgAFAAAAAAD+//b/AgAFAAAAAAD+//j/AgAFAAAAAAD+//n/AgAGAAAAAAD+/wsAAgAFAAAAAAD///X/AgAFAAAAAAD///r/AgAGAAEAAAD///3/AgAFAAAAAAD//wkAAgAFAAAAAAD//woAAgAFAAAAAAAAAPr/AgAFAAMAAAAAAP3/AgAFAAMAAAAAAAgAAgAFAAMAAAABAPb/AgAEAAsAAAABAPf/AgAFAAMAAAABAAoAAgAFAAMAAAACAPb/AgAFAAAAAAACAAoAAgAFAAAAAAACAAsAAgAFAAAAAAACAAwAAgAFAAAAAAADAPX/AgAGAAAAAAADAP3/AgAGAAEAAAAEAPX/AgAFAAAAAAAEAPb/AgAGAAAAAAAEAPj/AgAFAAAAAAAEAPr/AgAFAAAAAAAFAPX/AgAFAAAAAAAFAP3/AgAGAAAAAAAFAAkAAgAFAAAAAAAFAAwAAgAFAAAAAAAGAPr/AgAFAAAAAAAGAAgAAgAFAAAAAAAGAAsAAgAGAAEAAAAHAPb/AgAFAAAAAAAHAPf/AgAFAAAAAAAHAPj/AgAFAAAAAAAHAPn/AgAFAAAAAAAHAAsAAgAFAAAAAAAHAAwAAgAFAAAAAAAIAPj/AgAFAAAAAAAIAAkAAgAFAAAAAAAIAAoAAgAGAAEAAAAJAPX/AgAFAAAAAAAJAPf/AgAGAAAAAAAJAAgAAgAFAAAAAAAJAAoAAgAFAAAAAAAKAPX/AgAFAAAAAAAKAPf/AgAFAAAAAAAKAPn/AgAFAAAAAAAKAAIAAgAFAAAAAAAKAAcAAgAGAAAAAAAKAAgAAgAFAAAAAAAKAAwAAgAFAAAAAAALAPn/AgAFAAAAAAALAP//AgAFAAAAAAALAAAAAgAFAAAAAAALAAQAAgAGAAAAAAALAAkAAgAFAAAAAAAMAPn/AgAGAAEAAAAMAP7/AgAGAAEAAAAMAAIAAgAGAAEAAAAMAAQAAgAFAAAAAAAMAAoAAgAFAAAAAAANAPb/AgAFAAAAAAANAPf/AgAFAAAAAAANAPv/AgAFAAAAAAAOAPr/AgAGAAAAAAAOAPz/AgAGAAAAAAAOAP7/AgAFAAAAAAAOAAIAAgAFAAAAAAAOAAYAAgAGAAAAAAAPAPX/AgAGAAEAAAAPAPb/AgAGAAEAAAAPAPf/AgAFAAAAAAAPAPj/AgAFAAAAAAAPAPr/AgAFAAAAAAAPAPv/AgAFAAAAAAAPAP7/AgAFAAAAAAAPAAAAAgAFAAAAAAAPAAEAAgAFAAAAAAAPAAUAAgAFAAAAAAAPAAkAAgAFAAAAAAAPAAwAAgAFAAAAAAAQAPf/AgAFAAAAAAAQAPv/AgAGAAAAAAAQAP3/AgAFAAAAAAAQAAMAAgAFAAAAAAAQAAYAAgAFAAAAAAAQAAsAAgAFAAAAAAARAPf/AgACAAcAAAARAPX/AgACAAcAAAARAAIAAgACAAcAAAARAPT/AgACAAYAAAARAPb/AgACAAcAAAARAPj/AgACAAcAAAARAPn/AgACAAcAAAARAPr/AgACAAcAAAARAPv/AgACAAcAAAARAPz/AgACAAcAAAARAP3/AgACAAcAAAARAP7/AgACAAcAAAARAP//AgACAAcAAAARAAAAAgACAAcAAAARAAEAAgACAAcAAAARAAMAAgACAAcAAAARAAQAAgACAAcAAAARAAUAAgACAAcAAAARAAYAAgACAAcAAAARAAcAAgACAAcAAAARAAgAAgACAAcAAAARAAkAAgACAAcAAAARAAoAAgACAAcAAAARAAsAAgACAAcAAAARAAwAAgACAAcAAAARAA0AAgACAAgAAADv//T/AgAAAAYAAADv//b/AgAAAAcAAADv//f/AgAAAAcAAADv//j/AgAAAAcAAADv//n/AgAAAAcAAADv//r/AgAAAAcAAADv//v/AgAAAAcAAADv//z/AgAAAAcAAADv//3/AgAAAAcAAADv//7/AgAAAAcAAADv////AgAAAAcAAADv/wAAAgAAAAcAAADv/wEAAgAAAAcAAADv/wIAAgAAAAcAAADv/wMAAgAAAAcAAADv/wQAAgAAAAcAAADv/wUAAgAAAAcAAADv/wYAAgAAAAcAAADv/wcAAgAAAAcAAADv/wgAAgAAAAcAAADv/wkAAgAAAAcAAADv/woAAgAAAAcAAADv/wsAAgAAAAcAAADv/w0AAgAAAAgAAADx//T/AgABAAYAAADy//T/AgABAAYAAADz//T/AgABAAYAAAD0//T/AgABAAYAAAD1//T/AgABAAYAAAD2//T/AgABAAYAAAD3//T/AgABAAYAAAD4//T/AgABAAYAAAD5//T/AgABAAYAAAD6//T/AgABAAYAAAD7//T/AgABAAYAAAD8//T/AgAFAAAAAAD9//T/AgAFAAAAAAD+//T/AgAFAAAAAAD///T/AgABAAcAAAAAAPT/AgAFAAQAAAABAPT/AgAFAAQAAAACAPT/AgAFAAAAAAADAPT/AgAFAAAAAAAEAPT/AgAFAAAAAAAFAPT/AgAFAAAAAAAGAPT/AgABAAYAAAAHAPT/AgABAAYAAAAIAPT/AgABAAYAAAAJAPT/AgABAAYAAAAKAPT/AgABAAYAAAALAPT/AgABAAYAAAAMAPT/AgABAAYAAAANAPT/AgABAAYAAAAOAPT/AgABAAYAAAAPAPT/AgABAAYAAAAQAPT/AgABAAYAAADx/w0AAgABAAgAAADy/w0AAgABAAgAAADz/w0AAgABAAgAAAD0/w0AAgABAAgAAAD1/w0AAgABAAgAAAD2/w0AAgABAAgAAAD3/w0AAgABAAgAAAD4/w0AAgABAAgAAAD5/w0AAgABAAgAAAD6/w0AAgABAAgAAAD7/w0AAgABAAgAAAD8/w0AAgABAAgAAAD9/w0AAgABAAgAAAD+/w0AAgABAAgAAAD//w0AAgABAAgAAAAAAA0AAgABAAgAAAABAA0AAgABAAgAAAACAA0AAgABAAgAAAADAA0AAgABAAgAAAAEAA0AAgABAAgAAAAFAA0AAgABAAgAAAAGAA0AAgABAAgAAAAHAA0AAgABAAgAAAAIAA0AAgABAAgAAAAJAA0AAgABAAgAAAAKAA0AAgABAAgAAAALAA0AAgABAAgAAAAMAA0AAgABAAgAAAANAA0AAgABAAgAAAAOAA0AAgABAAgAAAAPAA0AAgABAAgAAAAQAA0AAgABAAgAAAD8//n/AgAFAAAAAAAAAPP/AgAFAAMAAAABAPP/AgAFAAMAAAD///P/AgABAAYAAAACAPP/AgABAAYAAAADAPP/AgABAAYAAAAEAPP/AgABAAYAAAD+//P/AgABAAYAAAD9//P/AgABAAYAAAAAAPj/AgAEAAsAAADw//T/AgABAAYAAADv//X/AgAAAAcAAADw//X/AgAFAAAAAADw/wwAAgAFAAAAAADv/wwAAgAAAAcAAADw/w0AAgABAAgAAAA=")
tile_set = ExtResource("2_jvjt4")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="TileInfoPanel" parent="UILayer" instance=ExtResource("9_tileinfo")]

[node name="TurnLabelCanvas" parent="." instance=ExtResource("6_3qnke")]
